feat(chats): Add chat